feat(nc-gui): show active dates

--- a/packages/nc-gui/lang/en.json
+++ b/packages/nc-gui/lang/en.json
@@ -422,7 +422,7 @@
     }
   },
   "labels": {
-    "organizeRecordsBy": "Organize records by",
+    "organizeBy": "Organize by",
     "heading1": "Heading 1",
     "heading2": "Heading 2",
     "heading3": "Heading 3",
@@ -667,7 +667,8 @@
     }
   },
   "activity": {
-    "setEndDate": "Set end date",
+    "setEndDate": "Set End Date",
+    "withEndDate": "with end date",
     "calendar": "Calendar",
     "viewSettings": "View settings",
     "openInANewTab": "Open in a new tab",
