--- a/packages/nc-gui/lang/en.json
+++ b/packages/nc-gui/lang/en.json
@@ -667,7 +667,7 @@
     }
   },
   "activity": {
-    "setEndDate": "Set End Date",
+    "addEndDate": "Add end date",
     "withEndDate": "with end date",
     "calendar": "Calendar",
     "viewSettings": "View settings",
