misc: lable text correction

--- a/packages/nc-gui/lang/en.json
+++ b/packages/nc-gui/lang/en.json
@@ -422,7 +422,7 @@
     }
   },
   "labels": {
-    "organizeRecordsBy": "Organize records by",
+    "organiseBy": "Organise by",
     "heading1": "Heading 1",
     "heading2": "Heading 2",
     "heading3": "Heading 3",
